# LLK

./: CMakeLists.txt  README.md  gamelogic.cpp  gamelogic.h  res.qrc  widget.cpp  widget.h  widget.ui
